# pico-dram-tester

firmware/: CMakeLists.txt  README.md  config.c  config.h  constants.c  constants.h  glossary.md  mem_chip.c  mem_chip.h  pmemtest.c  pmemtest.uf2  ram4164.c  ram4164.pio  ram4816.pio  usb_drive.c
firmware/include/: picotest.h  picotestRunner.inc
firmware/logging/: logging.c  logging.h  ulog.c  ulog.h
firmware/shared_storage/: LICENSE.md  fat.h  fat_image.h  fat_little_flash.c  fat_little_flash.h  pico_to_fat.c  shared_storage.c  shared_storage.h  tusb_config.h  tusb_to_fat.c
firmware/tests/: CMakeLists.txt  hooks.h  main.c
firmware/timings/: 4164-120.xlsx  Pico Dram Tester Timings.xlsx
